// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Table with different styles should render table with custom color map 1`] = `
"[01mTable with custom color 
          map           [0m
┌────┬─────────┬───────┐
│[37m [0m[01mid[0m │[37m [0m[01m name  [0m │[37m [0m[01mscore[0m │
├────┼─────────┼───────┤
│[37m [0m[1m[32m1 [0m │[37m [0m[1m[32m Alice [0m │[37m [0m[1m[32m   95[0m │
│[37m [0m[33m2 [0m │[37m [0m[33m  Bob  [0m │[37m [0m[33m   88[0m │
│[37m [0m[33m3 [0m │[37m [0m[33mCharlie[0m │[37m [0m[33m   92[0m │
└────┴─────────┴───────┘"
`;

exports[`Table with different styles should render table with custom colors 1`] = `
"[01mTable with custom colors[0m
┌────┬─────────┬───────┐
│[37m [0m[01mid[0m │[37m [0m[01m name  [0m │[37m [0m[01mscore[0m │
├────┼─────────┼───────┤
│[37m [0m[34m1 [0m │[37m [0m[32m Alice [0m │[37m [0m[33m   95[0m │
│[37m [0m[34m2 [0m │[37m [0m[32m  Bob  [0m │[37m [0m[33m   88[0m │
│[37m [0m[34m3 [0m │[37m [0m[32mCharlie[0m │[37m [0m[33m   92[0m │
└────┴─────────┴───────┘"
`;

exports[`Table with different styles should render table with custom column titles 1`] = `
"[01mTable with custom column titles[0m
┌────┬───────────┬────────────┐
│[37m [0m[01mID[0m │[37m [0m[01mFull Name[0m │[37m [0m[01mTest Score[0m │
├────┼───────────┼────────────┤
│[37m [0m[37m1 [0m │[37m [0m[37m  Alice  [0m │[37m [0m[37m        95[0m │
│[37m [0m[37m2 [0m │[37m [0m[37m   Bob   [0m │[37m [0m[37m        88[0m │
│[37m [0m[37m3 [0m │[37m [0m[37m Charlie [0m │[37m [0m[37m        92[0m │
└────┴───────────┴────────────┘"
`;

exports[`Table with different styles should render table with title 1`] = `
"[01m    Table with title    [0m
┌────┬─────────┬───────┐
│[37m [0m[01mid[0m │[37m [0m[01m name  [0m │[37m [0m[01mscore[0m │
├────┼─────────┼───────┤
│[37m [0m[37m1 [0m │[37m [0m[37m Alice [0m │[37m [0m[37m   95[0m │
│[37m [0m[37m2 [0m │[37m [0m[37m  Bob  [0m │[37m [0m[37m   88[0m │
│[37m [0m[37m3 [0m │[37m [0m[37mCharlie[0m │[37m [0m[37m   92[0m │
└────┴─────────┴───────┘"
`;
